--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -44,10 +44,10 @@ body {
             }
         }
         .header .header__menu-icon {
-            margin: 0;
+            margin: 0 10px;
         }
         .header .header__menu-icon .header__menu-item {
-            margin: 0 10px 0 0;
+            margin-right: 10px;
         }
     }
 }
