--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -154,7 +154,7 @@
             height: auto;
         }
         @media #{$res370} {
-            margin: 0;
+            margin: 0 10px;
         }
         li {
             padding: 0;
