--- a/assets/scss/page/top/_design.scss
+++ b/assets/scss/page/top/_design.scss
@@ -30,7 +30,7 @@
             max-width: 80%;
             margin: auto;
         }
-        .design__img-bottom {
+        img:first-child {
             vertical-align: bottom;
         }
     }
