--- a/assets/scss/page/_banner.scss
+++ b/assets/scss/page/_banner.scss
@@ -26,7 +26,7 @@
                 z-index: 1;
                 width: 680px;
             }
-            .top--border-bottom {
+            h2 {
                 padding: 0 0 36px 0;
                 &::after {
                     content: "";
