--- a/assets/scss/page/top/_what-we-do.scss
+++ b/assets/scss/page/top/_what-we-do.scss
@@ -39,7 +39,7 @@
             .text {
                 @media #{$res1200} {
                     max-width: 100%;
-                    margin: 10px 30px 10px 30px;
+                    margin: 10px 30px;
                 }
                 &:first-child {
                     margin-top: 0;
