--- a/assets/scss/page/top/_work.scss
+++ b/assets/scss/page/top/_work.scss
@@ -15,7 +15,6 @@
                 justify-content: center;
                 @media #{$res800} {
                     margin: auto;
-                    justify-content: center;
                 }
                 // @media #{$info-phone} {
                 //     display: flex;
@@ -87,110 +86,18 @@
                     .img-05,
                     .img-06,
                     .img-07 {
-                        &:hover .work__text {
-                            display: block;
-                            z-index: 99;
-                            opacity: 1;
-                        }
-                    }
-                    .img-01 {
                         &:hover {
+                            .work__text {
+                                display: block;
+                                z-index: 99;
+                                opacity: 1;
+                            }
                             &::after {
                                 content: "";
                                 position: absolute;
                                 width: 100%;
                                 height: 100%;
                                 z-index: 22;
-                                top: 0;
-                                left: 0;
-                                opacity: 0.9;
-                                background-image: linear-gradient(to bottom, rgba(228, 126, 125, 0.92), rgba(236, 211, 133, 0.92));
-                            }
-                        }
-                    }
-                    .img-02 {
-                        &:hover {
-                            &::after {
-                                content: "";
-                                position: absolute;
-                                width: 100%;
-                                height: 100%;
-                                z-index: 22;
-                                top: 0;
-                                left: 0;
-                                opacity: 0.9;
-                                background-image: linear-gradient(to bottom, rgba(228, 126, 125, 0.92), rgba(236, 211, 133, 0.92));
-                            }
-                        }
-                    }
-                    .img-03 {
-                        &:hover {
-                            &::after {
-                                content: "";
-                                position: absolute;
-                                width: 100%;
-                                height: 100%;
-                                z-index: 22;
-                                top: 0;
-                                left: 0;
-                                opacity: 0.9;
-                                background-image: linear-gradient(to bottom, rgba(228, 126, 125, 0.92), rgba(236, 211, 133, 0.92));
-                            }
-                        }
-                    }
-                    .img-04 {
-                        &:hover {
-                            &::after {
-                                content: "";
-                                position: absolute;
-                                width: 100%;
-                                height: 100%;
-                                z-index: 10;
-                                top: 0;
-                                left: 0;
-                                opacity: 0.9;
-                                background-image: linear-gradient(to bottom, rgba(228, 126, 125, 0.92), rgba(236, 211, 133, 0.92));
-                            }
-                        }
-                    }
-                    .img-05 {
-                        &:hover {
-                            &::after {
-                                content: "";
-                                position: absolute;
-                                width: 100%;
-                                height: 100%;
-                                z-index: 10;
-                                top: 0;
-                                left: 0;
-                                opacity: 0.9;
-                                background-image: linear-gradient(to bottom, rgba(228, 126, 125, 0.92), rgba(236, 211, 133, 0.92));
-                            }
-                        }
-                    }
-                    .img-06 {
-                        &:hover {
-                            &::after {
-                                content: "";
-                                position: absolute;
-                                width: 100%;
-                                height: 100%;
-                                z-index: 10;
-                                top: 0;
-                                left: 0;
-                                opacity: 0.9;
-                                background-image: linear-gradient(to bottom, rgba(228, 126, 125, 0.92), rgba(236, 211, 133, 0.92));
-                            }
-                        }
-                    }
-                    .img-07 {
-                        &:hover {
-                            &::after {
-                                content: "";
-                                position: absolute;
-                                width: 100%;
-                                height: 100%;
-                                z-index: 10;
                                 top: 0;
                                 left: 0;
                                 opacity: 0.9;
@@ -219,10 +126,10 @@
                     width: 65%;
                 }
                 .content-text {
-                    padding: 30px 0 0 0;
+                    padding-top: 30px;
                     @media #{$res1200} {
                         padding: 0;
-                        margin: 0 0 0 20px;
+                        margin-left: 20px;
                     }
                     @media #{$res800} {
                         margin-left: 10px;
