--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -30,8 +30,8 @@
     .hide-menu-btn {
         @media #{$res800} {
             position: absolute;
-            top: 8%;
-            right: 7%
+            top: 6%;
+            right: 8%;
         }
     }
     #chk {
@@ -41,16 +41,14 @@
     }
     #chk:checked~.header__menu {
         right: 0;
+        li{
+          margin: 0;
+        }
     }
     .header__inner {
         @include flex(center, space-between);
     }
-    .header__menu--flex {
-        display: flex;
-        li {
-            list-style: none;
-        }
-    }
+    
     .header__menu {
         margin-left: 35%;
         @media #{$res800} {
@@ -132,7 +130,7 @@
             &:nth-last-child(1) {
                 margin: 0;
             }
-            margin: 0 30px 0 0;
+            margin-right: 30px;
         }
         @media #{$res1000} {
             &:nth-last-child(1) {
