--- a/assets/scss/page/top/_blog.scss
+++ b/assets/scss/page/top/_blog.scss
@@ -45,13 +45,15 @@
                     transform: rotate(45deg) translate(-50%, 0);
                     transition-timing-function: ease-in;
                     z-index: 99;
+                    filter: blur(3px);
+                    // filter: drop-shadow(16px 16px 20px rgb(28, 32, 30)) invert(75%) blur(5px);
                 }
                 &::before {
                     width: 50px;
                     transition-duration: .6s;
                 }
                 &::after {
-                    width: 15px;
+                    width: 30px;
                     transition-delay: .2s;
                     transition-duration: .3s;
                 }
