--- a/assets/scss/page/top/_design.scss
+++ b/assets/scss/page/top/_design.scss
@@ -1,7 +1,7 @@
 .design {
     width: 100%;
-    background-image: url("/assets/img/background-enqui.png");
-    padding: 40px 0 0 0;
+    background-image: url("../img/background-enqui.png");
+    padding: 70px 0 0 0;
     background-repeat: no-repeat;
     background-size: cover;
     @media #{$res800} {
