--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -4,34 +4,36 @@ body {
     font-size: 16px;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
-    @media #{$res1000} {
-        .banner .banner__content .banner__content__top {
-            p {
-                font-size: 40px;
-            }
-            h2 {
-                font-size: 100px;
-            }
-        }
-    }
+  
     @media #{$res800} {
+     
         .banner .banner__content .banner__content__top {
             p {
-                font-size: 40px;
+                font-size: 50px;
             }
             h2 {
                 font-size: 70px;
                 max-width: 380px;
             }
-        }
+       }
+
     }
     @media #{$res600} {
-        .banner .banner__content .banner__content__top {
-            h2 {
-                font-size: 50px;
-                max-width: 280px;
-            }
-        }
+      .banner{
+        min-height: 550px;
+        .banner__content .banner__content__top {
+          h2 {
+              font-size: 50px;
+              max-width: 280px;
+          }
+          p {
+            font-size: 30px;
+          }
+          
+      }
+    }
+     
+        
     }
     @media #{$res370} {
         .banner .banner__content .banner__content__top {
