--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -99,6 +99,7 @@
                 transition: 0.4s;
                 transition-delay: .2s;
                 transition-timing-function: ease-in-out;
+                cursor: pointer;
             }
         }
         a {
