--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -121,7 +121,7 @@
         font-weight: bold;
         font-size: 30px;
         position: relative;
-        line-height: 2;
+        line-height: 2.3;
 
         @media #{$res600} {
             line-height: 1.5;
@@ -130,7 +130,7 @@
             content: "";
             position: absolute;
             left: 50%;
-            bottom: -30%;
+            bottom: -40%;
             width: 60px;
             height: 4px;
             background-color: #e46e6e;
@@ -148,7 +148,8 @@
         font-weight: 400;
         font-size: 15px;
 
-        margin: 50px 0 100px 0;
+        margin: 65px 120px 85px 120px;
+
         color: #9c9a9a;
         @media #{$res600} {
             margin: 30px 0 30px 0;
@@ -163,4 +164,6 @@
     a {
         color: #000;
     }
+    box-shadow: 0 0 6px -2px #000;
+
 }
