--- a/assets/scss/page/_banner.scss
+++ b/assets/scss/page/_banner.scss
@@ -6,13 +6,14 @@
     background-position: center;
     background-repeat: no-repeat;
     padding-top: 80px;
+    position: relative;
     .banner__content {
         color: #fff;
         .banner__content__top {
             align-items: center;
             justify-content: center;
             display: grid;
-            margin: 80px 0 0 0;
+            margin-top: 80px;
             text-align: center;
             cursor: context-menu;
             p {
@@ -20,14 +21,12 @@
                 font-size: 65px;
             }
             h2 {
+                padding-bottom: 36px;
                 font-size: 120px;
                 font-weight: bold;
                 position: relative;
                 z-index: 1;
                 width: 680px;
-            }
-            h2 {
-                padding: 0 0 36px 0;
                 &::after {
                     content: "";
                     position: absolute;
@@ -55,6 +54,8 @@
                 height: 35px;
                 outline: none;
                 transition: 0.4s all;
+                font-family: 'Montserrat', sans-serif;
+                font-weight: 500;
                 &:hover {
                     color: black;
                     transition: 0.4s all;
@@ -64,61 +65,61 @@
                 }
             }
         }
-        .banner__content__bottom {
-            margin-top: 80px;
-            ul {
-                @include flex(center,
-                center);
-                li {
-                    width: 200px;
-                    position: relative;
-                    line-height: 3;
-                    color: #f7eac5;
+        ul {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            @include flex(center,
+            center);
+            li {
+                width: 200px;
+                position: relative;
+                line-height: 3;
+                color: #f7eac5;
+                transition: 0.4s;
+                &::after {
+                    content: "";
+                    position: absolute;
+                    top: 0;
+                    width: 0%;
+                    height: 2px;
+                    border-top: 2px solid #db5f5f;
+                    left: 0;
+                    z-index: 2;
                     transition: 0.4s;
-                    &::after {
-                        content: "";
-                        position: absolute;
-                        top: 0;
-                        width: 0%;
-                        height: 2px;
-                        border-top: 2px solid #db5f5f;
-                        left: 0;
-                        z-index: 2;
-                        transition: 0.4s;
-                    }
-                    &:hover {
-                        &::before {
-                            color: white;
-                            transition: 0.4s;
-                        }
-                        &::after {
-                            width: 35%;
-                            transition: 0.4s;
-                        }
-                    }
+                }
+                &:hover {
                     &::before {
-                        content: "";
-                        position: absolute;
-                        top: 0;
-                        width: 90%;
-                        height: 2px;
-                        border-top: 2px solid;
-                        left: 0;
-                        z-index: 1;
-                    }
-                    a {
-                        color: #f7eac5;
-                        font-size: 12px;
+                        color: white;
                         transition: 0.4s;
-                        &:hover {
-                            color: white;
-                            transition: 0.4s;
-                        }
-                        span {
-                            font-weight: bold;
-                            font-size: 17px;
-                            padding: 0 5px 0 0;
-                        }
+                    }
+                    &::after {
+                        width: 35%;
+                        transition: 0.4s;
+                    }
+                }
+                &::before {
+                    content: "";
+                    position: absolute;
+                    top: 0;
+                    width: 90%;
+                    height: 2px;
+                    border-top: 2px solid;
+                    left: 0;
+                    z-index: 1;
+                }
+                a {
+                    color: #f7eac5;
+                    font-size: 12px;
+                    transition: 0.4s;
+                    &:hover {
+                        color: white;
+                        transition: 0.4s;
+                    }
+                    span {
+                        font-weight: bold;
+                        font-size: 17px;
+                        padding: 0 5px 0 0;
                     }
                 }
             }
