--- a/assets/scss/page/top/_feed-back.scss
+++ b/assets/scss/page/top/_feed-back.scss
@@ -14,32 +14,44 @@
             max-width: 1200px;
             display: block !important;
         }
-        .content-icon {
-            width: 150px;
-            height: 150px;
-            font-size: 50px;
-            @media #{$res1200} {
-                max-width: 150px;
-                max-height: 150px;
-                font-size: 40px;
-            }
-            @media #{$res800} {
-                max-width: 70px;
-                max-height: 70px;
-                font-size: 25px;
-            }
-            i {
-                border: 3px solid;
-                padding: 50px;
-                color: $green;
-                @media #{$res1200} {
-                    padding: 30px;
-                }
-                @media #{$res800} {
-                    padding: 10px;
-                }
-            }
+        img{
+          border: 3px solid $green;
+          padding: 35px;
+          max-height: 150px;
+          @media #{$res800} {
+            padding: 5px;
+            width: 50px;
+            height: 50px;
+          }
+
         }
+        // .content-icon {
+        //     width: 150px;
+        //     height: 150px;
+        //     font-size: 50px;
+        //     @media #{$res1200} {
+        //         max-width: 150px;
+        //         max-height: 150px;
+        //         font-size: 40px;
+        //     }
+        //     @media #{$res800} {
+        //         max-width: 70px;
+        //         max-height: 70px;
+        //         font-size: 25px;
+        //     }
+            
+        //     // i {
+        //     //     border: 3px solid;
+        //     //     padding: 50px;
+        //     //     color: $green;
+        //     //     @media #{$res1200} {
+        //     //         padding: 30px;
+        //     //     }
+        //     //     @media #{$res800} {
+        //     //         padding: 10px;
+        //     //     }
+        //     // }
+        // }
         .content-text {
             margin-left: 50px;
             @media #{$res1200} {}
