--- a/assets/scss/page/top/_people-say.scss
+++ b/assets/scss/page/top/_people-say.scss
@@ -1,6 +1,6 @@
 .say {
     max-width: 100%;
-    background-image: url("/assets/img/background-say.png");
+    background-image: url("../img/background-say.png");
     padding: 70px 0 15px 0;
     background-size: cover;
     object-fit: cover;
