--- a/assets/scss/page/top/_service.scss
+++ b/assets/scss/page/top/_service.scss
@@ -1,12 +1,12 @@
 .service {
-    margin: 110px auto;
+    margin: 110px auto 70px auto;
     max-width: 1200px;
     @media #{$res800} {
         margin: 50px auto;
     }
     .service__content {
         text-align: center;
-        padding: 40px 0 0 0;
+        padding-top: 50px;
         position: relative;
         &::after {
             content: "";
@@ -20,11 +20,11 @@
         @media #{$res1200} {
             max-width: 100%;
         }
-        i {
-            color: #95D1E3;
-            font-size: 30px;
-            width: 40px;
-            margin: 10px 20px 0 0;
+        img , i{
+          font-size: 30px;
+          width: 30px;
+          margin: 3px 30px 0 0;
+          height: 30px;
         }
         @include flex(center, center, wrap);
         .service__content__item {
@@ -45,12 +45,12 @@
                 font-family: 'Montserrat', sans-serif;
                 font-weight: 500;
                 font-size: 14px;
-                margin-bottom: 10px;
+                margin-bottom: 20px;
             }
             span {
                 font-family: 'Roboto', sans-serif;
                 font-weight: 500;
-                color: #666666;
+                color: #8b8080;
                 font-size: 14px;
             }
         }
